Added register new problem type API to the service
