# src/controllers/problem-type-controllers/index.js
@@ -1,0 +1,10 @@
+'use strict';
+
+import { verifyProblemTypeExist, registerNewProblemType } from './registerProblemType.controller.js';
+import { getTypeById } from './getProblemType.controller.js';
+
+export default {
+  verifyProblemTypeExist,
+  registerNewProblemType,
+  getTypeById,
+};
